@@ -1,13 +1,11 @@
 package com.scripledger.util;
 
+import org.bitcoinj.core.Utils;
 import org.jboss.logging.Logger;
 import org.p2p.solanaj.core.AccountMeta;
 import org.p2p.solanaj.core.PublicKey;
 import org.p2p.solanaj.core.TransactionInstruction;
 
-import java.nio.ByteBuffer;
-import java.nio.ByteOrder;
-import java.util.Arrays;
 import java.util.List;
 
 public class TokenProgramUtil {
@@ -19,41 +17,30 @@ public class TokenProgramUtil {
         // Implement this method to return the minimum balance required for rent exemption.
         return 2039280; // Example value, replace with actual calculation
     }
+
     public static final PublicKey PROGRAM_ID = new PublicKey("TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb");
 
-    public static final PublicKey SYSVAR_RENT_ADDRESS = new PublicKey("SysvarRent111111111111111111111111111111111");
-
-    private static final int MINT_TO_INDEX = 7;
-
-    public static TransactionInstruction initializeMint(
-            PublicKey mint,
-            int decimals,
+    public static TransactionInstruction mintTo(
+            PublicKey mintAccount,
+            PublicKey destinationAccount,
             PublicKey mintAuthority,
-            PublicKey freezeAuthority
-    ) {
-        List<AccountMeta> keys = Arrays.asList(
-                new AccountMeta(mint, false, true),
-                new AccountMeta(SYSVAR_RENT_ADDRESS, false, false)
+            long amount) {
+
+        List<AccountMeta> keys = List.of(
+                new AccountMeta(mintAccount, false, true), // Mint account (writable)
+                new AccountMeta(destinationAccount, false, true), // Destination account (writable)
+                new AccountMeta(mintAuthority, true, false) // Authority (signer)
         );
 
-        byte[] data = new byte[4 + 1 + 32 + 1 + (freezeAuthority != null ? 32 : 0)];
-        ByteBuffer buffer = ByteBuffer.wrap(data).order(ByteOrder.LITTLE_ENDIAN);
-        buffer.putInt(0); // Instruction index for initializeMint
-        buffer.put((byte) decimals);
-        buffer.put(mintAuthority.toByteArray());
-        buffer.put((byte) (freezeAuthority != null ? 1 : 0));
-
-        if (freezeAuthority != null) {
-            buffer.put(freezeAuthority.toByteArray());
-        }
+        byte[] data = new byte[9];
+        data[0] = (byte) 2;  // Assuming 0x02 is the opcode for MINT_TO
+        Utils.int64ToByteArrayLE(amount, data, 1);  // Amount to mint
 
         return new TransactionInstruction(
-                PROGRAM_ID,
+                PROGRAM_ID, // Token program ID
                 keys,
                 data
         );
     }
-
-
-
 }
+
